# nano-zed

./: Cargo.toml  README.md  nanogpt.md
.github/workflows/: release.yml
assets/keymaps/: initial.json
assets/settings/: default.json  initial_user_settings.json
crates/agent_ui/src/: agent_configuration.rs  agent_panel.rs  agent_registry_ui.rs  agent_ui.rs  language_model_selector.rs
crates/agent_ui/src/acp/: model_selector.rs  thread_view.rs
crates/agent_ui/src/acp/thread_view/: active_thread.rs
crates/agent_ui/src/agent_configuration/: configure_context_server_modal.rs
crates/agent_ui/src/ui/: acp_onboarding_modal.rs  claude_agent_onboarding_modal.rs  model_selector_components.rs
crates/cli/src/: main.rs
crates/edit_prediction/src/: mercury.rs
crates/gpui_windows/: build.rs
crates/gpui_windows/src/: directx_renderer.rs
crates/language_models/: Cargo.toml
crates/language_models/src/provider/: open_ai.rs  open_ai_compatible.rs
crates/open_ai/src/: open_ai.rs  responses.rs
crates/project/src/: context_server_store.rs
crates/release_channel/src/: lib.rs
crates/zed/: build.rs
crates/zed/src/: main.rs
crates/zed/src/zed/: app_menus.rs  mac_only_instance.rs
script/: build-windows-from-linux  bundle-linux  bundle-windows.ps1
tooling/msvc_spectre_libs/: Cargo.toml  build.rs
