[package]
name = "msvc_spectre_libs"
version = "0.1.3"
edition = "2021"
description = "Local override of msvc_spectre_libs for CI compatibility."
license = "MIT OR Apache-2.0"
build = "build.rs"

[features]
error = []

[lib]
path = "src/lib.rs"

[target.'cfg(all(target_os = "windows", target_env = "msvc"))'.build-dependencies]
cc = "1.0"
